deployment/client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: client-deployment-label
  template:
    metadata:
      labels: 
        app: client-deployment-label
    spec: 
      containers:
        - name: client-deployment-container
          image: andorkovacs/k8s-test-client-docker-image

---

apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service
spec:
  selector:
    app: client-deployment-label
  type: ClusterIP
  ports:
    - name: client-cluster-ip-service-port-name
      protocol: TCP
      port: 3000
      targetPort: 3000
