deployment/kafka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-deployment
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: kafka-deployment-label
  template:
    metadata:
      labels: 
        app: kafka-deployment-label
    spec: 
      containers:
        - name: kafka-deployment-container
          image: docker.io/bitnami/kafka
---

apiVersion: v1
kind: Service
metadata:
  name: kafka-cluster-ip-service
spec:
  selector:
    app: kafka-deployment-label
  type: ClusterIP
  ports:
    - name: kafka-cluster-ip-service-port-name
      protocol: TCP
      port: 9092
      targetPort: 9092
