deployment/microservice-a-database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice-a-database-deployment
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: microservice-a-database-deployment-label
  template:
    metadata:
      labels: 
        app: microservice-a-database-deployment-label
    spec: 
      containers:
        - name: microservice-a-database-deployment-container
          image: mongo

---

apiVersion: v1
kind: Service
metadata:
  name: microservice-a-database-cluster-ip-service
spec:
  selector:
    app: microservice-a-database-deployment-label
  type: ClusterIP
  ports:
    - name: microservice-a-database-cluster-ip-service-port-name
      protocol: TCP
      port: 27017
      targetPort: 27017
