deployment/microservice-a.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice-a-deployment
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: microservice-a-deployment-label
  template:
    metadata:
      labels: 
        app: microservice-a-deployment-label
    spec: 
      containers:
        - name: microservice-a-deployment-container
          image: andorkovacs/k8s-test-microservice-a-docker-image
---

apiVersion: v1
kind: Service
metadata:
  name: microservice-a-cluster-ip-service
spec:
  selector:
    app: microservice-a-deployment-label
  type: ClusterIP
  ports:
    - name: microservice-a-cluster-ip-service-port-name
      protocol: TCP
      port: 8080
      targetPort: 8080
