deployment/microservice-b.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice-b-deployment
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: microservice-b-deployment-label
  template:
    metadata:
      labels: 
        app: microservice-b-deployment-label
    spec: 
      containers:
        - name: microservice-b-deployment-container
          image: andorkovacs/k8s-test-microservice-b-docker-image
---

apiVersion: v1
kind: Service
metadata:
  name: microservice-b-cluster-ip-service
spec:
  selector:
    app: microservice-b-deployment-label
  type: ClusterIP
  ports:
    - name: microservice-b-cluster-ip-service-port-name
      protocol: TCP
      port: 8081
      targetPort: 8081
